test/invalid/idl/invalid-callback-argument.webidl
callback DoSomething = Promise<DOMString> (async iterable<DOMString> bool);
